--- a/src/App.css
+++ b/src/App.css
@@ -177,3 +177,80 @@
   border-radius: 3px;
   cursor: pointer;
 }
+@media only screen and (max-width: 770px) {
+  #app > .wrapper > .image-wrapper > .image-con {
+    height: 175px;
+  }
+  #app > .wrapper > .image-wrapper > div > .date {
+    width: 70px;
+    height: 60px;
+    margin-top: -28px;
+    margin-left: 23px;
+    font-size: 13px;
+  }
+  #app > .wrapper > hr {
+    margin: 15px 0px;
+  }
+  #app > .wrapper > .details > .author {
+    font-size: 17px;
+  }
+  #app > .wrapper > .details > .author > div {
+    width: 25px;
+    font-size: 12px;
+  }
+  #app > .wrapper > .details > .title {
+    font-size: 23px;
+    font-weight: bolder;
+    line-height: 25px;
+    margin-top: 5px;
+  }
+  #app > .wrapper > .details > .sub-title {
+    font-size: 17px;
+  }
+  #app > .wrapper > .details > .read-more {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 430px) {
+  #app > .wrapper {
+    width: 100%;
+  }
+  #app > .wrapper > .image-wrapper > .image-con {
+    height: 175px;
+  }
+  #app > .wrapper > .image-wrapper > div > .date {
+    width: 60px;
+    height: 50px;
+    margin-top: -28px;
+    margin-left: 23px;
+    font-size: 13px;
+  }
+  #app > .wrapper > .image-wrapper > div > .date > .date {
+    font-size: 20px;
+  }
+  #app > .wrapper > .image-wrapper > div > .share {
+    font-size: 9px;
+  }
+  #app > .wrapper > hr {
+    margin: 10px 0px;
+  }
+  #app > .wrapper > .details > .author {
+    font-size: 14px;
+  }
+  #app > .wrapper > .details > .author > div {
+    width: 22px;
+    font-size: 11px;
+  }
+  #app > .wrapper > .details > .title {
+    font-size: 21px;
+    font-weight: bolder;
+    line-height: 22px;
+    margin-top: -1px;
+  }
+  #app > .wrapper > .details > .sub-title {
+    font-size: 14px;
+  }
+  #app > .wrapper > .details > .read-more {
+    font-size: 12px;
+  }
+}
